# GlimmerWorks

./: .gitignore  CMakeLists.txt  README.md  README_zh_CN.md  config.json  config.toml  config_debug.toml  config_template.cmake  main  main.cpp  mingw64.cmake  versions.cmake
.github/workflows/: cmake-multi-platform.yml
.trae/documents/: worldcontext-phase2-completion-plan.md  worldcontext-refactor-plan.md  worldcontext-refactor-resume-plan.md
contributor/: Contributor.cpp  Contributor.h  ContributorManager.h
core/: App.cpp  App.h  AppEventLoop.cpp  AppEventLoop.h  AppRenderer.cpp  AppRenderer.h  BoolOrToggle.cpp  BoolOrToggle.h  Box2dFilter.cpp  Box2dFilter.h  CommandHookEntry.cpp  CommandHookEntry.h  CommandHookManager.cpp  CommandHookManager.h  CommandHookScope.h  Config.cpp  Config.h  Constants.h  GameUIMessage.cpp  GameUIMessage.h  Hyperlink.cpp  Hyperlink.h  IFingerprintable.cpp  IFingerprintable.h  ISignable.cpp  ISignable.h  Langs.cpp  Langs.h  LangsResources.cpp  LangsResources.h  MemoryUsage.cpp  MemoryUsage.h  SelectedItemRuntimeData.cpp  SelectedItemRuntimeData.h  TagRuntimeData.cpp  TagRuntimeData.h  TilePlacementConfig.cpp  TilePlacementConfig.h  TileStateBackup.cpp  TileStateBackup.h
core/console/: Command.cpp  Command.h  CommandArgs.cpp  CommandArgs.h  CommandEnvironment.h  CommandExecutor.cpp  CommandExecutor.h  CommandHistoryManager.cpp  CommandHistoryManager.h  CommandManager.cpp  CommandManager.h  CommandRequest.cpp  CommandRequest.h  CommandResponse.cpp  CommandResponse.h  CommandResult.cpp  CommandResult.h  CommandSender.cpp  CommandSender.h  CommandStructure.cpp  CommandStructure.h  CommandSuggestions.cpp  CommandSuggestions.h  ConsoleMessage.cpp  ConsoleMessage.h  ConsoleWorker.cpp  ConsoleWorker.h  LocalConsoleInput.cpp  LocalConsoleInput.h
core/context/: AppContext.cpp  AppContext.h  AudioContext.cpp  ConsoleContext.cpp  ConsoleContext.h  GraphicsContext.cpp  GraphicsContext.h  ModContext.cpp  ModContext.h  RmlContext.cpp  RmlContext.h  WindowContext.cpp  WindowContext.h
core/contributor/: Contributor.cpp  Contributor.h  ContributorManager.cpp  ContributorManager.h
core/ecs/: DroppedItemCreator.cpp  DroppedItemCreator.h  EcsTypes.h  EntityManager.cpp  EntityManager.h  EntityShortCut.cpp  EntityShortCut.h  FlowingTextCreator.cpp  FlowingTextCreator.h  GameComponent.cpp  GameComponent.h  GameEntity.cpp  GameEntity.h  GameSystem.cpp  GameSystem.h  GameSystemType.cpp  GameSystemType.h  GuiGameSystem.cpp  GuiGameSystem.h  GuiStackGameSystem.cpp  GuiStackGameSystem.h  IDocumentRegistry.h  IEntityCreator.cpp  IEntityCreator.h  IPersistenceEntityCreator.cpp  IPersistenceEntityCreator.h  ISwitchable.cpp  ISwitchable.h  IVisible.cpp  IVisible.h  ItemSlotType.h  MobEntityCreator.cpp  MobEntityCreator.h  PlayerCapabilityHandler.cpp  PlayerCapabilityHandler.h  PlayerInputHandler.cpp  PlayerInputHandler.h  PlayerTechnologyHandler.cpp  PlayerTechnologyHandler.h  TileBreakParams.h
core/inventory/: AbilityItem.cpp  AbilityItem.h  AbilityItemCreateParams.cpp  AbilityItemCreateParams.h  ComposableItem.cpp  ComposableItem.h  ComposableItemCreateParams.cpp  ComposableItemCreateParams.h  ContainerChangeType.cpp  ContainerChangeType.h  CraftPreview.cpp  CraftPreview.h  DragAndDrop.cpp  DragAndDrop.h  DragSourceType.cpp  DragSourceType.h  DragState.cpp  DragState.h  InitialInventoryManager.cpp  InitialInventoryManager.h  Item.cpp  Item.h  ItemAbilityFactory.cpp  ItemAbilityFactory.h  ItemContainer.cpp  ItemContainer.h  ItemDurabilityModule.cpp  ItemDurabilityModule.h  ItemFunctionMod.cpp  ItemFunctionMod.h  ItemLockModule.cpp  ItemLockModule.h  ItemStackModule.cpp  ItemStackModule.h  ItemTagModule.cpp  ItemTagModule.h  MaterialItem.cpp  MaterialItem.h  TileItem.cpp  TileItem.h
core/layout/: GridLayoutStepper.cpp  GridLayoutStepper.h  HorizontalLayoutStepper.cpp  HorizontalLayoutStepper.h  ILayoutStepper.cpp  ILayoutStepper.h  VerticalLayoutStepper.cpp  VerticalLayoutStepper.h
core/log/: LogCat.cpp  LogCat.h
core/lootTable/: LootEntry.cpp  LootEntry.h  LootTableManager.cpp  LootTableManager.h
core/math/: AllocStrategyType.cpp  AllocStrategyType.h  BackwardAllocStrategy.cpp  BackwardAllocStrategy.h  BalanceAllocStrategy.cpp  BalanceAllocStrategy.h  CameraVector2D.cpp  CameraVector2D.h  Color.cpp  Color.h  ColorF.cpp  ColorF.h  CoordinateTransformer.cpp  CoordinateTransformer.h  DesignVector2D.cpp  DesignVector2D.h  FastNoiseLite.h  ForwardAllocStrategy.cpp  ForwardAllocStrategy.h  IAllocStrategy.cpp  IAllocStrategy.h  IAllocatable.cpp  IAllocatable.h  NormalizedVector2D.cpp  NormalizedVector2D.h  RandomAllocStrategy.cpp  RandomAllocStrategy.h  ScreenVector2D.cpp  ScreenVector2D.h  TileVector2D.cpp  TileVector2D.h  Vector2D.cpp  Vector2D.h  Vector2DBase.cpp  Vector2DBase.h  Vector2DI.cpp  Vector2DI.h  Vector2DIBase.cpp  Vector2DIBase.h  Vector2DIHash.cpp  (+3 more)
core/mod/: ITemplateCommand.cpp  ITemplateCommand.h  PackManifest.cpp  PackManifest.h  PackVerifyState.cpp  PackVerifyState.h  Resource.cpp  Resource.h  ResourceLocator.cpp  ResourceLocator.h  ResourceRef.cpp  ResourceRef.h  StructurePlacementConditionsManager.cpp  StructurePlacementConditionsManager.h  TomlTemplateExpander.cpp  TomlTemplateExpander.h
core/rmi/: GameFileInterface.cpp  GameFileInterface.h  GameFontEngineInterface.cpp  GameFontEngineInterface.h  RenderInterfaceSDL3.cpp  RenderInterfaceSDL3.h  SystemInterfaceSDL3.cpp  SystemInterfaceSDL3.h
core/saves/: MapManifest.cpp  MapManifest.h  Saves.cpp  Saves.h  SavesManager.cpp  SavesManager.h
core/scene/: AppContext.cpp  AppContext.h  AudioContext.cpp  AudioContext.h  ConsoleContext.cpp  ConsoleContext.h  ConsoleOverlay.cpp  ConsoleOverlay.h  ConsoleScene.cpp  ConsoleScene.h  CreateWorldScene.cpp  CreateWorldScene.h  DebugOverlay.cpp  DebugOverlay.h  GraphicsContext.cpp  GraphicsContext.h  HomeScene.cpp  HomeScene.h  MainScene.cpp  MainScene.h  Scene.cpp  (+14 more)
core_langs/: default.json  default.toml  ja_JP.json  ja_JP.toml  zh_CN.json  zh_CN.toml  zh_HK.json  zh_HK.toml  zh_TW.toml
core_langs_debug/: default.toml  ja_JP.toml  zh_CN.toml  zh_HK.toml
(+609 files in other folders)
